// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> DoubleColorSecondaryWithoutIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-gx8qpa MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Primary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-w7x9kq MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> PrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-lw5g2p MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-w7x9kq MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-lw5g2p MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-12xtgxb MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-yrxanw MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Secondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-12xtgxb MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> SecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-yrxanw MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Test story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-w7x9kq MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  data-testid="tags"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> TripleColorSecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1an067j MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;
